# Jal-Sanket-Kendra

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_DOCS.md  Dockerfile  README.md  TODO.md  alembic.ini  app.txt  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  sample_cgwb_upload.csv  tree.txt  water_quality.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: api.py  cache.py  calculator.py  config.py  logging_config.py  middleware.py  models.py  schemas.py  standards.py
app/routes/: __init__.py  alerts.py  health.py  indices.py  predict.py  quickcalc.py  tasks.py  upload.py
app/services/: __init__.py  calculation_service.py  file_parser.py  pdf_parser.py
data/: test_data.csv
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/static/: app.js  index.html
frontend/static/assets/: index-0O9I9men.css  index-3HhWXLcb.css  index-8KT69qGa.js  index-B2Uo5BUS.css  index-B8xkgRvg.js  index-BA4j2QZW.css  index-BVwGhDcb.js  index-BZIfeOAA.js  index-BeaKaEO_.js  index-Blp8_ABJ.js  index-BmnxveEY.css  index-Bn8B8YU_.css  index-BpaN0Xh8.js  index-BtYwswFM.js  index-BvwgQV4E.js  index-BwW1fFgk.css  index-C0_4Oo-2.js  index-CH2AnGIm.css  index-CNUg8FYM.js  index-CQ5z_mZi.js  index-CTjX69RD.js  index-CVX4DXdG.js  index-CZKagRJ5.css  index-CZsRF-7A.js  index-CxNOV2L3.css  index-CyJ1kiTc.js  index-D4LKxTm5.css  index-DDIu3WTh.css  index-DQF9CD3z.js  index-DXWnT4hT.css  index-D_dd2et6.js  index-DjfIcI5R.js  index-Do2YvLhl.js  index-Dq8dk2c-.css  index-GyGjhdyO.css  index-HHZPFbzU.js  index-JU1whCpF.css  index-Vbt4tzL0.js  index-_ut2Aa9c.js  index-de075boB.css  (+33 more)
frontend/web/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.js
frontend/web/src/: App.jsx  index.css  main.jsx  style.css
frontend/web/src/components/: AccessibilityWidget.jsx  DesignSpells.jsx
frontend/web/src/pages/: AlertsView.jsx  DataView.jsx  FormulasView.jsx  MapView.jsx  PredictView.jsx  QuickCalcView.jsx
scripts/: check_schema.py  export_codebase.py  inspect_pdf.py  parse_pdfs.py  start.ps1  start.sh
tests/: conftest.py  test_api.py  test_calculator.py
