[project]
name = "jalsanketkendra"
version = "0.1.0"
description = "Jal Sanket Kendra is used for testing presence of Heavy Metals inside the Water"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "tabula>=1.0.5",
    "uvicorn>=0.40.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
